styles/links.css
.links-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  max-width: 800px;
  padding: 0 .5em;
  overflow: auto;
  margin: auto;
}

.tabs {
  display: flex;
  flex-direction: row;
  column-gap: .5em;
  padding: .5em;
  border: 2px solid var(--light300);
  border-radius: .5em;
  margin-top: .5em;
  position: relative;
}

.tabs span {
  padding: .5em;
  color: var(--light200);
}

.tabs .active-tab {
  color: var(--light);
}

.moving-bg {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 50%;
  background-color: var(--light300);
  border-radius: .5em;
  margin: .5em;
}

.professional-tab {
  margin-top: 2.5em;
  width: 100%;
}

.personal-details {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-pic {
  border: 2px solid var(--light300);
  border-radius: 50%;
  width: 5em;
  height: 5em;
}

.profile-pic img {
  width: 100%;
  height: 100%;
}

.name {
  margin-top: 1em;
}

.description {
  margin-top: .5em;
  color: var(--light100);
}

.personal-tab {
  display: none;
}

.links {
  margin-top: 2.5em;
  margin-bottom: 1em;
  width: 100%;
}

.links-list {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.links-list>*+* {
  margin-top: .5em;
}

.link {
  display: flex;
  flex-direction: row;
  background-color: var(--light400);
  padding: 1em;
  width: 100%;
  border-radius: 1em;
}

.icon-text {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.icon {
  width: 2.5em;
  height: 2.5em;
  margin-right: 1em;
}

.icon img {
  width: 100%;
  height: 100%;
}

.link-description {
  color: var(--light200);
}

.link .text {
  display: flex;
  flex-direction: column;
  row-gap: .5em;
}

.footer {
  margin-top: auto;
  margin-bottom: 1em;
}

